# CMake-P-Invoke

./: CMakeLists.txt  CMakePInvoke.sln  CMakePresets.json  README.md
.github/workflows/: ci.yaml
ConsoleApplication/: CMakeLists.txt  ConsoleApplication.csproj  Program.cs
NativeLibrary/: CMakeLists.txt  NativeLibrary.vcxproj  Source.cpp
